test_yuriiq/catalog/language/english/account/forgotten.php
<?php

// text
$_['text_account']	= 'Account';
$_['text_forgotten']	= 'Forgotten Password';
$_['text_success']	= 'Success: A new password has been sent to your e-mail address.';
$_['text_email']	= 'Enter the e-mail address associated with your account. Click submit to have your password e-mailed to you.';
$_['text_your_email']	= 'Your E-Mail Address';

// error
$_['error_email']	= 'Warning: The E-Mail Address was not found in our records, please try again!';

// entry
$_['entry_email']	= 'E-Mail Address:';

// heading
$_['heading_title']	= 'Forgot Your Password?';
?>